[gd_scene load_steps=4 format=3 uid="uid://c5l0aej3cgpyr"]

[ext_resource type="Script" uid="uid://bv0hk5invoswk" path="res://dungeon_root.gd" id="1_dungeon"]
[ext_resource type="TileSet" uid="uid://c3cnbklx2xj5b" path="res://Tilesett.tres" id="2_tileset"]
[ext_resource type="Script" path="res://levels/level_town.gd" id="3_level"]
[ext_resource type="Script" path="res://Player.gd" id="4_player"]
[ext_resource type="Script" path="res://camera_2d.gd" id="5_cam"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 8.0
height = 16.0

[node name="LevelTown" type="Node2D"]
script = ExtResource("3_level")

[node name="DungeonTileMap" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("1_dungeon")

[node name="TileMapFloor" type="TileMap" parent="DungeonTileMap"]
y_sort_enabled = true
tile_set = ExtResource("2_tileset")
format = 2

[node name="FloorLayer" type="TileMapLayer" parent="DungeonTileMap/TileMapFloor"]
tile_set = ExtResource("2_tileset")

[node name="WallLayer" type="TileMapLayer" parent="DungeonTileMap/TileMapFloor"]
z_index = 1
tile_set = ExtResource("2_tileset")

[node name="TopLayer" type="TileMapLayer" parent="DungeonTileMap/TileMapFloor"]
z_index = 2
y_sort_enabled = true
tile_set = ExtResource("2_tileset")
y_sort_origin = 8

[node name="Camera2D" type="Camera2D" parent="LevelTown"]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="LevelTown/Camera2D"]

[node name="UI" type="Control" parent="LevelTown/Camera2D/CanvasLayer"]
layout_mode = 3

[node name="HPBar" type="ProgressBar" parent="LevelTown/Camera2D/CanvasLayer/UI"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 216.0
offset_bottom = 32.0
max_value = 100.0
value = 100.0

[node name="RotateButton" type="Button" parent="LevelTown/Camera2D/CanvasLayer/UI"]
layout_mode = 0
offset_left = 16.0
offset_top = 48.0
offset_right = 120.0
offset_bottom = 80.0
text = "Rotate"

[node name="PauseMenu" type="Control" parent="LevelTown/Camera2D/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="LevelTown/Camera2D/CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="VBoxContainer" type="VBoxContainer" parent="LevelTown/Camera2D/CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="LevelTown/Camera2D/CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Weiter"

[node name="ExitButton" type="Button" parent="LevelTown/Camera2D/CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Zur√ºck zur Level-Auswahl"

[node name="Player" type="CharacterBody2D" parent="LevelTown"]
z_index = 1
collision_layer = 2
script = ExtResource("4_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelTown/Player"]
shape = SubResource("1")

[node name="Graphics" type="Node2D" parent="LevelTown/Player"]

[node name="Body" type="AnimatedSprite2D" parent="LevelTown/Player/Graphics"]

[node name="Head" type="AnimatedSprite2D" parent="LevelTown/Player/Graphics"]
z_index = 1

[node name="Camera2D" type="Camera2D" parent="LevelTown/Player"]
script = ExtResource("5_cam")
